--- a/iOSApplication/makemitBGController/makemitBGcontroller/Base.lproj/Main.storyboard
+++ b/iOSApplication/makemitBGController/makemitBGcontroller/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="125" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ayo-NR-hMp">
-                                <rect key="frame" x="125" y="368" width="124" height="71"/>
+                                <rect key="frame" x="125.5" y="368" width="124" height="71"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="71" id="H6V-h3-gh2"/>
                                     <constraint firstAttribute="width" constant="124" id="zvI-Mw-WQ1"/>
@@ -66,16 +66,6 @@
                                     <constraint firstAttribute="width" constant="24" id="HUY-im-JHy"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="BG Value:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDP-0Y-H6n">
-                                <rect key="frame" x="16" y="501" width="188" height="71"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="188" id="2Hx-sj-ebU"/>
-                                    <constraint firstAttribute="height" constant="71" id="pl9-dK-clm"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Target BG:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdC-zw-j26">
                                 <rect key="frame" x="0.0" y="339" width="375" height="42"/>
                                 <constraints>
@@ -85,30 +75,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRu-KJ-lbg">
-                                <rect key="frame" x="294" y="509" width="55" height="55"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="55" id="Mk6-f2-dnQ"/>
-                                    <constraint firstAttribute="width" constant="55" id="SiF-gO-Yq6"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="button_subtract.png"/>
-                                <connections>
-                                    <action selector="lowerBGvalue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cdo-GH-On2"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1fc-N8-MFB">
-                                <rect key="frame" x="223" y="509" width="55" height="55"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="55" id="3ck-2e-L2h"/>
-                                    <constraint firstAttribute="width" constant="55" id="VHM-eN-fcu"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="button_add.png"/>
-                                <connections>
-                                    <action selector="raiseBGvalue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bwi-WJ-wTs"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5NN-M6-P51">
-                                <rect key="frame" x="257" y="376" width="55" height="55"/>
+                                <rect key="frame" x="257.5" y="376" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="X5H-AS-qOH"/>
                                     <constraint firstAttribute="height" constant="55" id="eUl-FI-vaA"/>
@@ -119,7 +87,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tdd-c1-jdH">
-                                <rect key="frame" x="62" y="376" width="55" height="55"/>
+                                <rect key="frame" x="62.5" y="376" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="QzD-zo-uLM"/>
                                     <constraint firstAttribute="height" constant="55" id="ZrR-ar-Ld0"/>
@@ -129,9 +97,43 @@
                                     <action selector="raiseTargetBG:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wMu-ml-rDm"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BG Value:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDP-0Y-H6n">
+                                <rect key="frame" x="16" y="582" width="188" height="71"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="188" id="2Hx-sj-ebU"/>
+                                    <constraint firstAttribute="height" constant="71" id="pl9-dK-clm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRu-KJ-lbg">
+                                <rect key="frame" x="294" y="590" width="55" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="Mk6-f2-dnQ"/>
+                                    <constraint firstAttribute="width" constant="55" id="SiF-gO-Yq6"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="button_subtract.png"/>
+                                <connections>
+                                    <action selector="lowerBGvalue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cdo-GH-On2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1fc-N8-MFB">
+                                <rect key="frame" x="223" y="590" width="55" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="3ck-2e-L2h"/>
+                                    <constraint firstAttribute="width" constant="55" id="VHM-eN-fcu"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="button_add.png"/>
+                                <connections>
+                                    <action selector="raiseBGvalue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bwi-WJ-wTs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.77500688808935658" green="0.94160022253119768" blue="0.97892252604166663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1fc-N8-MFB" secondAttribute="bottom" constant="22" id="5De-iu-GBI"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="XRu-KJ-lbg" secondAttribute="bottom" constant="22" id="6fk-ad-YCv"/>
                             <constraint firstItem="oA1-am-OEy" firstAttribute="top" secondItem="dtQ-iT-jZv" secondAttribute="bottom" constant="26" id="7Vk-7B-jhH"/>
                             <constraint firstItem="5NN-M6-P51" firstAttribute="leading" secondItem="ayo-NR-hMp" secondAttribute="trailing" constant="8" id="AlN-oE-Jvd"/>
                             <constraint firstItem="oA1-am-OEy" firstAttribute="leading" secondItem="zzf-Kd-TkK" secondAttribute="trailing" constant="121" id="DZE-vU-RTa"/>
@@ -151,6 +153,7 @@
                             <constraint firstItem="ayo-NR-hMp" firstAttribute="top" secondItem="zzf-Kd-TkK" secondAttribute="bottom" constant="53" id="lmg-gL-601"/>
                             <constraint firstItem="tdd-c1-jdH" firstAttribute="top" secondItem="zzf-Kd-TkK" secondAttribute="bottom" constant="61" id="m7N-zf-zgd"/>
                             <constraint firstItem="LdC-zw-j26" firstAttribute="top" secondItem="zzf-Kd-TkK" secondAttribute="bottom" constant="24" id="ndI-rY-0St"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tDP-0Y-H6n" secondAttribute="bottom" constant="14" id="oev-sY-KBI"/>
                             <constraint firstItem="zzf-Kd-TkK" firstAttribute="top" secondItem="dtQ-iT-jZv" secondAttribute="bottom" constant="8" id="uHm-dJ-LuI"/>
                         </constraints>
                     </view>
