--- a/iOSApplication/makemitBGController/makemitBGcontroller/Base.lproj/Main.storyboard
+++ b/iOSApplication/makemitBGController/makemitBGcontroller/Base.lproj/Main.storyboard
@@ -97,18 +97,8 @@
                                     <action selector="raiseTargetBG:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wMu-ml-rDm"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BG Value:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDP-0Y-H6n">
-                                <rect key="frame" x="16" y="582" width="188" height="71"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="188" id="2Hx-sj-ebU"/>
-                                    <constraint firstAttribute="height" constant="71" id="pl9-dK-clm"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRu-KJ-lbg">
-                                <rect key="frame" x="294" y="590" width="55" height="55"/>
+                                <rect key="frame" x="257" y="453" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="Mk6-f2-dnQ"/>
                                     <constraint firstAttribute="width" constant="55" id="SiF-gO-Yq6"/>
@@ -119,7 +109,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1fc-N8-MFB">
-                                <rect key="frame" x="223" y="590" width="55" height="55"/>
+                                <rect key="frame" x="62" y="453" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="3ck-2e-L2h"/>
                                     <constraint firstAttribute="width" constant="55" id="VHM-eN-fcu"/>
@@ -129,32 +119,42 @@
                                     <action selector="raiseBGvalue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bwi-WJ-wTs"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BG Value:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tDP-0Y-H6n">
+                                <rect key="frame" x="144" y="464" width="87" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="XKn-Mb-6kx"/>
+                                    <constraint firstAttribute="height" constant="33" id="dk7-FA-w0i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.77500688808935658" green="0.94160022253119768" blue="0.97892252604166663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1fc-N8-MFB" secondAttribute="bottom" constant="22" id="5De-iu-GBI"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="XRu-KJ-lbg" secondAttribute="bottom" constant="22" id="6fk-ad-YCv"/>
+                            <constraint firstItem="tDP-0Y-H6n" firstAttribute="top" secondItem="ayo-NR-hMp" secondAttribute="bottom" constant="25" id="48C-zT-vbp"/>
+                            <constraint firstItem="XRu-KJ-lbg" firstAttribute="leading" secondItem="tDP-0Y-H6n" secondAttribute="trailing" constant="26" id="5Ru-lq-gnm"/>
                             <constraint firstItem="oA1-am-OEy" firstAttribute="top" secondItem="dtQ-iT-jZv" secondAttribute="bottom" constant="26" id="7Vk-7B-jhH"/>
                             <constraint firstItem="5NN-M6-P51" firstAttribute="leading" secondItem="ayo-NR-hMp" secondAttribute="trailing" constant="8" id="AlN-oE-Jvd"/>
                             <constraint firstItem="oA1-am-OEy" firstAttribute="leading" secondItem="zzf-Kd-TkK" secondAttribute="trailing" constant="121" id="DZE-vU-RTa"/>
-                            <constraint firstItem="1fc-N8-MFB" firstAttribute="leading" secondItem="tDP-0Y-H6n" secondAttribute="trailing" constant="19" id="F4F-2N-5vf"/>
                             <constraint firstItem="dtQ-iT-jZv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="14" id="J3S-mW-TWt"/>
+                            <constraint firstItem="tDP-0Y-H6n" firstAttribute="leading" secondItem="1fc-N8-MFB" secondAttribute="trailing" constant="27" id="KLV-Cf-iIL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oA1-am-OEy" secondAttribute="trailing" constant="10" id="MY7-UP-7gZ"/>
                             <constraint firstItem="ayo-NR-hMp" firstAttribute="leading" secondItem="tdd-c1-jdH" secondAttribute="trailing" constant="8" id="OdT-0a-K7o"/>
-                            <constraint firstItem="XRu-KJ-lbg" firstAttribute="leading" secondItem="1fc-N8-MFB" secondAttribute="trailing" constant="16" id="SG1-hT-fos"/>
+                            <constraint firstItem="1fc-N8-MFB" firstAttribute="top" secondItem="tdd-c1-jdH" secondAttribute="bottom" constant="22" id="PPt-Yu-Wdt"/>
                             <constraint firstAttribute="trailing" secondItem="dtQ-iT-jZv" secondAttribute="trailing" id="Sua-Qq-2ea"/>
                             <constraint firstItem="ayo-NR-hMp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="V0f-IU-AqZ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="XRu-KJ-lbg" secondAttribute="trailing" constant="10" id="VDd-ow-elj"/>
                             <constraint firstItem="5NN-M6-P51" firstAttribute="top" secondItem="dtQ-iT-jZv" secondAttribute="bottom" constant="140" id="WXp-72-YTw"/>
                             <constraint firstItem="dtQ-iT-jZv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="X5V-8t-5fF"/>
                             <constraint firstItem="zzf-Kd-TkK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="XOr-5g-FPQ"/>
                             <constraint firstAttribute="trailing" secondItem="LdC-zw-j26" secondAttribute="trailing" id="ay8-j0-i06"/>
+                            <constraint firstItem="tDP-0Y-H6n" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bec-wQ-AVt"/>
                             <constraint firstItem="LdC-zw-j26" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hgI-LT-SJh"/>
                             <constraint firstItem="ayo-NR-hMp" firstAttribute="top" secondItem="zzf-Kd-TkK" secondAttribute="bottom" constant="53" id="lmg-gL-601"/>
                             <constraint firstItem="tdd-c1-jdH" firstAttribute="top" secondItem="zzf-Kd-TkK" secondAttribute="bottom" constant="61" id="m7N-zf-zgd"/>
                             <constraint firstItem="LdC-zw-j26" firstAttribute="top" secondItem="zzf-Kd-TkK" secondAttribute="bottom" constant="24" id="ndI-rY-0St"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tDP-0Y-H6n" secondAttribute="bottom" constant="14" id="oev-sY-KBI"/>
                             <constraint firstItem="zzf-Kd-TkK" firstAttribute="top" secondItem="dtQ-iT-jZv" secondAttribute="bottom" constant="8" id="uHm-dJ-LuI"/>
+                            <constraint firstItem="XRu-KJ-lbg" firstAttribute="top" secondItem="5NN-M6-P51" secondAttribute="bottom" constant="22" id="yg9-sn-c6q"/>
                         </constraints>
                     </view>
                     <connections>
